quicklog/tests/failures/prefixed_arg_after_fmt_str.stderr
error: expected an expression
  --> tests/failures/prefixed_arg_after_fmt_str.rs:12:55
   |
12 |     info!(a = ?s1, "prefixed arg after fmt str: {b}", ?s1);
   |                                                       ^
